Bug 153347 - Dolphin does not understand doubleslash as smb urls
Summary: Dolphin does not understand doubleslash as smb urls
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 153562 167231 215062 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-12-03 14:24 UTC by zOOm_ER
Modified: 2010-10-04 20:13 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description zOOm_ER 2007-12-03 14:24:51 UTC
Version:            (using KDE KDE 3.96.0)
Installed from:    Unspecified Linux

Konqueror already get this.
urls like "\\10.0.3.23" must be interpreted as "smb://10.0.3.23".
Comment 1 Peter Penz 2007-12-06 14:50:49 UTC
*** Bug 153562 has been marked as a duplicate of this bug. ***
Comment 2 Peter Penz 2008-07-22 19:42:13 UTC
*** Bug 167231 has been marked as a duplicate of this bug. ***
Comment 3 FiNeX 2008-11-30 14:27:03 UTC
Dolphin in current trunk still need the protocol in order to work.
Comment 4 Peter Penz 2008-11-30 16:58:34 UTC
SVN commit 890888 by ppenz:

provide a central point to adjust the typed text:
* remove whitespaces at the begin and end of the text
* replace \ by /

BUG: 171160
BUG: 153347

 M  +21 -7     kurlnavigator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=890888
Comment 5 zOOm_ER 2009-03-08 20:24:15 UTC
Dolphin v 1.2.1 from KDE 4.2 still can't understand "\\10.0.3.23", typed in address bar...
it says "Invalid protocol"
Comment 6 Peter Penz 2009-11-19 08:01:55 UTC
*** Bug 215062 has been marked as a duplicate of this bug. ***
Comment 7 Mark 2010-09-02 02:03:16 UTC
Hmm, in windows this is indeed allowed thus for consistency between windows/linux it might be handy to implement this.

The implementation would simply replace "\\" by "smb://".
The current behavior tries to open a webbrowser which is wrong since url's simply don't have "\\" neither can it be assumed by "\\". A network path can be assumed when the it starts with "\\"

Perhaps this can be done as a kurifilter just like ftp.example.com is (in kde 4.6) translated to ftp://ftp.example.com
Comment 8 Mark 2010-09-08 12:20:31 UTC
SVN commit 1172981 by markg:

Fix KUrlNavigator to send raw data (QString instead of KUrl) to KUriFilter.

BUG: 153347
FIXED-IN: 4.6


 M  +8 -9      kurlnavigator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1172981
Comment 9 Gökçen Eraslan 2010-10-04 19:31:36 UTC
Not backportinng this to 4.5 branch is just forgotten or an intentional decision?
Comment 10 Mark 2010-10-04 20:13:56 UTC
intentional.
Or rather, i don't dare to backport it.

Just wait for 4.6.. You can very simply use smb:// instead of \\ for the moment so it's not like you miss something if it's not backported.