Fix KUrlNavigator to send raw data (QString instead of KUrl) to KUriFilter.

BUG: 153347
FIXED-IN: 4.6

svn path=/trunk/KDE/kdelibs/; revision=1172981